--- a/web/src/admin/AdminInterface/index.entrypoint.css
+++ b/web/src/admin/AdminInterface/index.entrypoint.css
@@ -45,3 +45,7 @@ ak-sidebar-item:active ak-sidebar-item::part(list-item) {
 .pf-c-drawer__panel {
     z-index: var(--pf-global--ZIndex--xl);
 }
+
+dialog::backdrop {
+    background-color: var(--pf-global--BackgroundColor--dark-transparent-100);
+}
